src/components/Main/main.css
.container {
  padding: 5px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-direction: row;
}
@media (max-width: 1200px) {
    .container {
        flex-direction: column;
    }
    .input-container {
        width: 500px !important;
    }
}
@media (max-width: 700px) {
    .input-container {
        width: 350px !important;
    }
}
.input-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 5px solid black;
  border-radius: 5px;
  padding: 10px;
  width: 700px;
  background-color: #bdeaee;
}

input {
  border-radius: 5px;
  padding: 10px;
  margin: 10px 5px;
}
.output-container {
    margin-left: 20px;
    background-color: white;
    padding: 20px;
    width: 500px;
}
button {
  display: inline-block;
  padding: 0.3em 1.2em;
  margin: 0 0.1em 0.1em 0;
  border: 0.16em solid rgba(255, 255, 255, 0);
  border-radius: 2em;
  box-sizing: border-box;
  text-decoration: none;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  color: #ebf4f6;
  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
  text-align: center;
  transition: all 0.2s;
  background-color: #58668b;
}
button:hover {
    border-color: #55ddaa;
}
@media all and (max-width: 30em) {
  button {
    display: block;
    margin: 0.2em auto;
  }
}

